--- a/index.html
+++ b/index.html
@@ -13,19 +13,18 @@
             <div id="ptop">
                 <div id="elem">
                     <h2>hit</h2>
-                    <div class="box">5</div>
+                    <div id="hitval" class="box">5</div>
                 </div>
                 <div id="elem">
                     <h2>Timer</h2>
-                    <div class="box">60</div>
+                    <div id="timerval" class="box"></div>
                 </div>
                 <div id="elem">
                     <h2>Score</h2>
-                    <div class="box">9</div>
+                    <div id="scoreval" class="box">0</div>
                 </div>
             </div>
             <div id="pbtm">
-                <div class="bubble"></div>
             </div>
         </div>
     </div>
